<resources>

    <!--  <string name="server">http://10.14.59.62:8080</string> -->
    <string name="server">http://47.96.9.248:8080</string>
    <string name="api_get_database_info">/get-database-info</string>
    <string name="api_page_sync_database">/page-sync-database</string>
    <string name="api_get_icon_list">/get-icon-list</string>
    <string name="api_get_icon">/get-icon</string>
    <string name="api_get_icon_zip">/get-icon-zip</string>
    <string name="api_query">/query-profile</string>
    <string name="api_update">/update-profile</string>
    <string name="dir_icon">GenshinIcon</string>
    <string name="click_cold_down_ms">500</string>
    <string name="text_app_name">KamiNoKuchi</string>
    <string name="text_app_title_chs">神之嘴</string>
    <string name="text_app_title_jp">カミノクチ</string>
    <string name="text_app_subtitle">Genshin Player Tools</string>
    <string name="text_icon_updating">正在更新资源…</string>
    <string name="text_hint_uid_input">请输入uid</string>
    <string name="text_uid_prefix">UID: </string>
    <string name="text_level_prefix">Lv.</string>
    <string name="text_level">Lv.%d</string>
    <string name="text_constellation_suffix">命</string>
    <string name="text_constellation">%d命</string>
    <string name="btn_to_page_query">查询面板</string>
    <string name="tips_chara_detail">Tips:\n\t·下划获取历史面板（如果有的话）\n\t·点击评分规则以更换某些角色的圣遗物评分规则\n\t·其他功能还在咕咕中……</string>
    <string name="megaz">—— by MegaZ</string>
    <string name="btn_load_profile">本地读取</string>
    <string name="btn_update_profile">更新面板</string>
    <string name="text_default_player_name">旅行者</string>
    <string name="text_character_list_title">角色列表</string>
    <string name="text_default_character_name">旅行者之荧 </string>
    <string name="text_default_character_level">Lv.90</string>
    <string name="text_default_character_cons">0命</string>
    <string name="text_default_talent_level">Lv.10</string>
    <string name="text_default_date_change"><![CDATA[2022-12-15 00:00:00 -> 2022-12-15 00:00:00]]></string>
    <string name="text_default_date">2022–12–15 00:00:00</string>
    <string name="text_default_weapon_name">异世旅者初心剑</string>
    <string name="text_default_weapon_level">Lv.90</string>
    <string name="text_default_refine">精炼1阶</string>
    <string name="text_refine">精炼%d阶</string>
    <string name="text_refine_prefix">精炼</string>
    <string name="text_refine_suffix">阶</string>
    <string name="text_weapon_main_attribute">基础攻击力</string>
    <string name="text_default_weapon_main_attribute_value">185</string>
    <string name="text_default_weapon_sub_attribute">元素充能效率</string>
    <string name="text_default_weapon_sub_attribute_value">00.0%</string>
    <string name="text_artifact_level_prefix">+</string>
    <string name="text_default_artifact_name">异世旅者的祝圣秘宝</string>
    <string name="text_default_weight">\??</string>
    <string name="text_criterion_name">评分规则：%s</string>
    <string name="text_criterion_name_empty">评分规则：暂无</string>
    <string name="text_wish_slogan">信仰概率，摒弃玄学</string>
    <string name="text_target_up_num">目标限定五星数量：</string>
    <string name="text_consumed">卡池已垫抽数：</string>
    <string name="text_wish_budget">纠缠之缘预算：</string>
    <string name="text_big_guarantee">已歪常驻五星？</string>
    <string name="text_nope">否</string>
    <string name="text_yep">是</string>
    <string name="text_destined">命定值：</string>
    <string name="text_default_zero">0</string>
    <string name="text_no_effect_data">该角色暂无实战评估数据</string>
    <string name="text_effect_desc_default">奥义·梦想真说梦想一心满愿力重击伤害</string>
    <string name="text_crit_or_not">（暴击伤害/平均伤害）</string>
    <string name="text_effect_unavailable">NaN</string>
    <string name="text_effect_number_default">131072/65536</string>
    <string name="text_average">（平均伤害）</string>
    <string name="title_activity_fight_effect_detail">FightEffectDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tips_of_buff_list">Tips:\n\t· 长按BUFF查看BUFF详情\n\t· 点按BUFF选择关闭BUFF</string>
    <string name="text_title_enemy_attribute">怪物目标参数配置</string>
    <string name="text_default_profile_title">uid: 107372409</string>
    <string name="text_no_history">暂无历史面板</string>
    <string name="text_title_history_selection">参照历史面板选取</string>
    <string name="text_title_virtual_config">虚构面板配置</string>
    <string name="text_title_history">参照面板：%s</string>
    <string name="text_title_virtual">虚构面板：%s</string>
    <string name="text_promote_true">已突破</string>
    <string name="text_promote_false">未突破</string>
    <string name="text_weapon_not_match">!类型不匹配!</string>
</resources>