<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".fragment.WeaponFragment">
    <FrameLayout
        android:id="@+id/layout_weapon"
        android:layout_width="@dimen/dp_120"
        android:layout_height="@dimen/dp_55"
        android:layout_gravity="bottom|right"
        android:background="@drawable/bg_weapon"
        android:paddingHorizontal="@dimen/dp_1">
        <ImageView
            android:id="@+id/img_weapon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/sword"/>
        <LinearLayout
            android:id="@+id/layout_weapon_info"
            android:layout_width="@dimen/dp_70"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:orientation="vertical"
            android:background="@drawable/bg_weapon_gradient"
            android:paddingLeft="@dimen/dp_1"
            android:gravity="left|center_vertical">

            <TextView
                android:id="@+id/tv_weapon_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/text_default_weapon_name"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_9"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="top"
                android:layout_marginTop="@dimen/dp_1">
                <TextView
                    android:id="@+id/tv_weapon_lv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_2"
                    android:text="@string/text_default_weapon_level"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_9"/>
                <TextView
                    android:id="@+id/tv_weapon_af"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_2"
                    android:text="@string/text_default_refine"
                    android:textStyle="bold"
                    android:paddingHorizontal="@dimen/dp_2"
                    android:textColor="@color/affix_yellow"
                    android:textSize="@dimen/sp_8"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/dp_1"
                android:background="@drawable/bg_weapon_attribute">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_1"
                    android:layout_centerVertical="true"
                    android:text="@string/text_weapon_main_attribute"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_8"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/tv_weapon_main_value"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp_1"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_default_weapon_main_attribute_value"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_8"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/dp_1"
                android:background="@drawable/bg_weapon_attribute">

                <TextView
                    android:id="@+id/tv_weapon_sub_attribute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_1"
                    android:layout_centerVertical="true"
                    android:text="@string/text_default_weapon_sub_attribute"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_7"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_weapon_sub_attribute_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/text_default_weapon_sub_attribute_value"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_7"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>
    </FrameLayout>

</FrameLayout>