<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_40"
    tools:context=".fragment.FightEffectFragment"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/dp_5">
    <LinearLayout
        android:id="@+id/layout_effect_number_baseline"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_effect_number_baseline"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text_effect_number_default"
            android:textSize="@dimen/sp_16"/>
        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@drawable/bg_horizontal_div_gr"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="@dimen/dp_200"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/text_effect_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/sp_10"
            android:text="@string/text_effect_desc_default"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/text_crit_or_not"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/sp_7"
            android:text="@string/text_crit_or_not"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/text_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/sp_7"
            android:text="@string/text_average"
            android:textColor="@color/white"
            android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_effect_number"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@drawable/bg_horizontal_div_gr"/>
        <TextView
            android:id="@+id/text_effect_number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text_effect_number_default"
            android:textSize="@dimen/sp_16"/>
</LinearLayout>


</LinearLayout>