<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_50"
    tools:context=".fragment.ProfileHistoryFragment"
    android:background="@drawable/bg_profile_history"
    android:orientation="horizontal"
    android:layout_marginVertical="@dimen/dp_2">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2">
        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginStart="@dimen/dp_2"
            android:text="@string/text_default_date"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_12" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="bottom|left"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_character_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_5"
                android:paddingHorizontal="@dimen/dp_2"
                android:text="@string/text_default_character_level"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/text_cons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:background="@color/cons_0"
                android:paddingHorizontal="@dimen/dp_2"
                android:text="@string/text_default_character_cons"
                android:textColor="@color/gray_black"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_50"
            android:layout_gravity="bottom|center_horizontal"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_weapon"
                android:layout_width="@dimen/dp_45"
                android:layout_height="@dimen/dp_45"
                android:background="@drawable/bg_weapon"
                android:scaleType="fitCenter"
                android:src="@drawable/sword" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:layout_marginStart="@dimen/dp_5"
                android:gravity="left"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_weapon_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_default_weapon_level"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:id="@+id/text_weapon_refine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_default_refine"
                    android:textColor="@color/affix_yellow"
                    android:textSize="@dimen/sp_12" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_criterion"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/text_criterion_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="旅行者者者-默认"
            android:textSize="@dimen/dp_10"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_artifacts_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_2"
                android:text="ACE"
                android:textSize="@dimen/dp_18"
                android:textColor="@color/rank_ace"/>
            <TextView
                android:id="@+id/text_artifacts_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_2"
                android:text="234.5"
                android:textSize="@dimen/dp_18"
                android:textColor="@color/white"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>