<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="@dimen/dp_12"
    android:layout_marginVertical="@dimen/dp_12"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_110"
        android:orientation="horizontal"
        android:background="@drawable/bg_player_profile"
        android:paddingHorizontal="@dimen/dp_10"
        android:gravity="center_vertical"
        android:elevation="@dimen/dp_2"
        android:translationZ="@dimen/dp_2">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_player_avatar"
            android:layout_width="@dimen/dp_75"
            android:layout_height="@dimen/dp_75"
            app:shapeAppearanceOverlay="@style/circleImageStyle"
            android:background="@drawable/bg_player_face"
            app:strokeColor="@color/face_bg"
            android:padding="@dimen/dp_2"
            app:strokeWidth="@dimen/dp_2"/>

<!--        <LinearLayout-->
<!--            android:layout_width="@dimen/dp_75"-->
<!--            android:layout_height="@dimen/dp_75"-->
<!--            android:padding="@dimen/dp_1"-->
<!--            android:background="@drawable/bg_player_face"-->
<!--            android:layout_gravity="top"-->
<!--            android:layout_marginTop="@dimen/dp_10"-->
<!--            android:gravity="center">-->

<!--            <com.megaz.knk.CircleImageView-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_width="match_parent"-->
<!--                android:id="@+id/img_player_avatar"-->
<!--                android:background="@drawable/bg_player_face"-->
<!--                android:gravity="center"-->
<!--                android:textSize="@dimen/sp_24"-->
<!--                app:type="circle"-->
<!--                app:border_color="@color/face_frame"-->
<!--                app:border_width="@dimen/dp_3"/>-->
<!--        </LinearLayout>-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/btn_update"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_22"
                android:layout_gravity="top|right"
                android:layout_marginTop="@dimen/dp_10"
                android:src="@drawable/update_profile"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_12"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/text_player_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_default_player_name"
                    android:textSize="@dimen/sp_20"/>
                <TextView
                    android:id="@+id/text_uid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_uid_prefix"
                    android:textSize="@dimen/sp_12"/>
                <TextView
                    android:id="@+id/text_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:textSize="@dimen/sp_14"/>
            </LinearLayout>
        </FrameLayout>


    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_character_list_title"
        android:textSize="@dimen/sp_16"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_5"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_character_list"
        android:paddingVertical="@dimen/dp_2"
        android:elevation="@dimen/dp_2"
        android:translationZ="@dimen/dp_2">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:id="@+id/layout_character_list">
        </GridLayout>
    </ScrollView>

</LinearLayout>